--- a/src/containers/sidebar/sidebar.css
+++ b/src/containers/sidebar/sidebar.css
@@ -1,8 +1,11 @@
 .header {
   background: #333333;
+  position: fixed;
   height: 50px;
   width: 100%;
   box-shadow: 2px 2px 2px #ccc;
+  display: flex;
+  flex-direction: column;
 }
 .header ul {
   background: #333333;
@@ -17,7 +20,7 @@
   top: 50px;
   left: -200px;
   align-items: center;
-  box-shadow: 2px 2px 2px #ccc;
+  /* box-shadow: 2px 2px 2px #ccc; */
   transition: 300ms ease all;
 }
 .header ul.active {
@@ -29,9 +32,8 @@
 .header ul li {
   width: 100%;
   list-style-type: none;
-  padding: 10px 20px;
-  padding-left: 0;
-  padding-right: 0;
+  margin: 0px;
+  padding: 0px;
 }
 .header ul li.active {
   background: #999999;
@@ -44,8 +46,7 @@
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
-  margin-left: 20px;
-  margin-right: 13px;
+  padding: 10px 15px;
 }
 .header ul li img {
   margin-right: 5px;
@@ -61,6 +62,35 @@
   left: 5px;
   top: 7px;
   font-size: 24px;
+}
+.logoContainer:hover {
+  text-decoration: none;
+  color: #ffffff;
+}
+.menuContainer {
+  display: flex;
+  position: absolute;
+  right: 10px;
+  height: 50px;
+}
+.menuItem {
+  background-color: #0286be;
+  text-decoration: none;
+  color: #ffffff;
+  cursor: pointer;
+  border-radius: 5px;
+  margin: 10px 10px;
+  font-size: 14px;
+  padding: 0.3rem 1rem;
+}
+.menuItem:hover {
+  text-decoration: none;
+  color: #ffffff;
+}
+.menuItem:active {
+  background-color: rgba(91, 204, 254, 0.9);
+  text-decoration: none;
+  color: #ffffff;
 }
 .logoContainer_mb {
   display: none;
@@ -92,7 +122,7 @@
     align-items: center;
     cursor: pointer;
     position: fixed;
-    left: 5px;
+    margin-left: 10px;
     top: 10px;
     font-size: 24px;
   }
