Complete UI of Login register added with social media buttons.

--- a/src/containers/forgotPassword/forgotPassword.css
+++ b/src/containers/forgotPassword/forgotPassword.css
@@ -36,16 +36,13 @@
   display: flex;
   color: #ffffff;
 }
-.scrollViewWidth {
-  width: 320px;
+.logoImage {
+  height: 10rem;
+  width: 10rem;
 }
-.avatarImg {
-  margin: 5px;
-  height: 20%;
-  width: 20%;
-  max-height: 70px;
-  max-width: 70px;
-  cursor: pointer;
+.fgPass {
+  font-weight: normal !important;
+  text-align: right;
 }
 .navLink {
   cursor: pointer;
@@ -54,34 +51,4 @@
 }
 .navLink:hover {
   color: rgba(2, 134, 190, 0.7);
-}
-
-.fbBtn {
-  padding: 0.5rem;
-  color: #ffffff;
-  background-color: #3b5999 !important;
-  border-top-right-radius: 0 !important;
-  border-bottom-right-radius: 0 !important;
-}
-.appleBtn {
-  padding: 0.5rem;
-  color: #ffffff;
-  background-color: #000000 !important;
-  border-radius: 0 !important;
-}
-.googleBtn {
-  padding: 0.5rem;
-  color: #ffffff;
-  background-color: #d54837 !important;
-  border-top-left-radius: 0 !important;
-  border-bottom-left-radius: 0 !important;
-}
-
-@media only screen and (max-width: 767px) {
-  .fbBtn,
-  .appleBtn,
-  .googleBtn {
-    border-radius: 5px !important;
-    margin-top: 5px;
-  }
 }
