--- a/src/containers/home/home.css
+++ b/src/containers/home/home.css
@@ -1,6 +1,5 @@
-.page_container {
+.home_container {
   display: flex;
   min-height: calc(100vh - 50px);
   width: 100%;
-  justify-content: center;
 }
