--- a/src/containers/login/login.css
+++ b/src/containers/login/login.css
@@ -2,13 +2,14 @@
   display: flex;
   min-height: calc(100vh - 50px);
   width: 100%;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .box {
   margin: 1rem;
   margin-top: 2rem;
+  margin-bottom: 0px;
   height: fit-content;
-  width: 30rem;
   border-radius: 10px;
   box-shadow: 0px 1px 15px 1px rgba(69, 65, 78, 0.1);
   padding: 20px;
@@ -38,4 +39,45 @@
 .logoImage {
   height: 10rem;
   width: 10rem;
+}
+.fgPass {
+  font-weight: normal !important;
+  text-align: right;
+}
+.navLink {
+  cursor: pointer;
+  color: #0286be;
+  font-weight: 500;
+}
+.navLink:hover {
+  color: rgba(2, 134, 190, 0.7);
+}
+.fbBtn {
+  padding: 0.5rem;
+  color: #ffffff;
+  background-color: #3b5999 !important;
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
+.appleBtn {
+  padding: 0.5rem;
+  color: #ffffff;
+  background-color: #000000 !important;
+  border-radius: 0 !important;
+}
+.googleBtn {
+  padding: 0.5rem;
+  color: #ffffff;
+  background-color: #d54837 !important;
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+}
+
+@media only screen and (max-width: 767px) {
+  .fbBtn,
+  .appleBtn,
+  .googleBtn {
+    border-radius: 5px !important;
+    margin-top: 5px;
+  }
 }
