--- a/src/containers/register/register.css
+++ b/src/containers/register/register.css
@@ -27,6 +27,7 @@
   justify-content: center;
   border-radius: 5px;
   background-color: #6dbd8e;
+  color: #ffffff;
   padding: 0.4rem;
 }
 .button:active {
