Layout Screen, Issue Screen, Estimation Screen and Result Screen added.

--- a/src/containers/navbar/navbar.css
+++ b/src/containers/navbar/navbar.css
@@ -31,10 +31,15 @@
   transform: rotate(180deg);
 }
 .header ul li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
   list-style-type: none;
   margin: 0px;
   padding: 0px;
+  cursor: pointer;
 }
 .header ul li.active {
   background: #999999;
@@ -43,15 +48,50 @@
   color: #ffffff;
   text-decoration: none;
   display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
+  flex: 1;
   flex-direction: row;
-  justify-content: space-between;
-  padding: 10px 15px;
+}
+.sideBarItemText {
+  display: flex;
+  flex: 1;
+  padding: 6px;
+  padding-left: 15px;
+}
+.sideBarItemIconA {
+  flex: 0 !important;
+}
+.sideBarItemArrowIcon {
+  font-size: 18px;
+  margin-top: 3px;
+  margin-left: 5px;
+}
+.sideBarItemIcon {
+  color: #ffffff;
+  font-size: 20px;
+  padding: 8px 15px !important;
+}
+.sideBarItemIconSpcl {
+  flex: 0;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 8px 15px !important;
+  border-left: 1px solid #999;
+}
+.sideBarItemIconSpcl:hover {
+  color: #0286be;
+  background-color: #000000;
+  font-size: 20px;
+  padding: 8px 15px !important;
+  border-left: 1px solid #999;
 }
 .header ul li img {
   margin-right: 5px;
   font-size: 20px;
+}
+.borderItem {
+  border: 1px solid #999;
+  border-left: 0px;
+  border-right: 0px;
 }
 .logoContainer {
   text-decoration: none;
@@ -113,6 +153,8 @@
 }
 .logoImg {
   margin-right: 5px;
+  margin-top: 3;
+  margin-right: 10;
 }
 .arrowContainer {
   display: flex;
