--- a/src/style.css
+++ b/src/style.css
@@ -22,11 +22,36 @@
 .swiper-button-next {
   color: #0286be !important;
 }
-
 .box {
   width: 33rem;
 }
-
+.header-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  border-bottom: 1px solid #dee2e6;
+}
+.header-title {
+  line-height: 1.5;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+@media only screen and (max-width: 767px) {
+  .header-title {
+    line-height: 1;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .header-title {
+    line-height: 0.5;
+    font-size: 0.7rem;
+    font-weight: 500;
+  }
+}
 @media only screen and (max-width: 1022px) {
   .box {
     max-width: 33rem;
