--- a/src/style.css
+++ b/src/style.css
@@ -331,6 +331,20 @@
     font-weight: 500;
   }
 }
+::-webkit-scrollbar{
+    height: 5px;
+    width: 5px;
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 5px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #333333; 
+    border-radius: 5px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: #747373; 
+  }
+  
 @media only screen and (max-width: 540px) {
   .box {
     max-width: 26rem;
