--- a/src/components/sidebarList.css
+++ b/src/components/sidebarList.css
@@ -1,37 +1,6 @@
-.inner {
-  width:100%;
-  height:50%;
-  overflow: scroll;
-}
-.threedots:after {
-  content: "\2807";
-  font-size: 30px;
-}
-.dropdown-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 1000;
-  display: none;
-  float: left;
+.dropdownMenu {
   min-width: 7rem;
-  padding: .5rem 0;
-  margin: .125rem 0 0;
-  font-size: 1rem;
-  color: #212529;
-  text-align: left;
-  list-style: none;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid rgba(0,0,0,.15);
-  border-radius: .25rem;
-  height: 80px;
-}
-
-element.style {
-  background-color: white;
-  height: 10%;
-  left: 98px;
-  width: 5%;
-  top: 118px;
+  padding:0px;
+  border: 1px solid rgba(7, 7, 7, 0.15);
+  background-clip:unset;
 }
